Changelog
=========

4.0 - unreleased
----------------

- Set max_results param to '10000000' as default value as described in
  http://wiki.apache.org/solr/CommonQueryParameters#rows. It seems this has
  changed in Solr 4.
  [timo]

- Integrate 'suggest-terms' view from ftw.solr. No UI yet!
  [timo, 4teamworks]

- Add plone.app.testing setup.
  [timo]

- Support fuzzy search for SearchableText.
  [csenger,timo]

- Make sure slashes are properly escaped in the search query. Solr 4.0 added
  regular expression support, which means that '/' is now a special character
  and must be escaped if searching for literal forward slash.
  [timo]

- Implement the getDataOrigin method for the FlareContentListingObject that
  plone.app.contentlisting defines and that plone.app.search expects to exist.
  [timo]

- Use tika for extracting binary content.
  [tom_gross]

- Plone 4.3 compatibility of search view
  [tom_gross]

- Introduce ICheckIndexable-adapter for checking if an object is indexable.
  [tom_gross]

- Use proper i18n labels.
  [tom_gross]

- Drop dependency on elementree (in favour of lxml).
  [tom_gross]

- Let getRID return a real integer (like ZCatalog)
  [tom_gross]

- ``solrBase`` should be a string, fixes #8
  [saily]


3.1 - 2013-02-16
----------------

- Add datehandler support for python date objects.
  [jcbrand]

- Add optional plone.app.contentlisting/plone.app.search support
  [do3cc][csenger]

- Add datehandler support for python date objects.
  [jcbrand]

- Add inthandler support for not indexing Integers that are None.
  [do3cc]


3.0 - 2012-02-06
----------------

- Ignore a batch start parameter when selecting a facet to filter on.
  https://github.com/Jarn/collective.solr/issues/12
  [mj]


3.0b5 - 2011-12-07
------------------

- Removed `solr_dump_catalog` and `solr_import_dump` command line scripts.
  They were too dependent on internals and had subtle bugs.
  [hannosch]

- Sort arguments in `buildQuery` to get a stable ordering for test output.